2002-04-09  Shivram U  <shivaram.upadhyayula@wipro.com>

	* src/gtkhex.c (get_max_char_width): Only displayable characters are
	used for calculating max char width. Fixes the pango warnings 
	generated when opening a file (Bug #76294)

2002-04-29  Shivram U  <shivaram.upadhyayula@wipro.com>

	* src/ui.c, src/converter.c: Fixed problem with disabling and enabling
	"Get cursor value" button while closing and opening files.	

2002-04-26  Shivram U  <shivaram.upadhyayula@wipro.com>

	* src/ghex-ui.xml: Fixed Help menu as per usability issues mentioned
	in #79251.
	* src/main.c: Fixed the name of the program passed in gnome_program_init
	It was "ghex" in the help patch. Changed to "ghex2" as the executable
	name is "ghex2". This was eariler causing a problem for restoring a 
	session.
	* help/(lang)/Makefile.am: Renamed app to ghex2. Added ghex2.sgml files

2002-04-24  Satyajit K  <satyajit.kanungo@wipro.com>

	Reviewed by Shivram U  <shivaram.upadhyayula@wipro.com>

	* src/Makefile.am, src/ghex-ui.xml, src/main.c, src/ui.c
		Added Help functionality. Fixes #79158

2002-04-24  Shivram U  <shivaram.upadhyayula@wipro.com>

	* src/bonobo-mdi.c: Before setting the status message, if the message
	passed is not space " " then we first set the status bar message as
	a space " ". Required to clear the status bar first.
	* src/chartable.c: Added close button for the chartable window.
	* Fixed usablility issues as mentioned in Bug #79251 and #79253.
	
2002-04-23  Shivram U  <shivaram.upadhyayula@wipro.com>

	* configure.in: Replace AC_PROG_LIBTOOL with AM_PROG_LIBTOOL
	* src/chartable.c: Converted GtkCList to GtkTreeView.

2002-04-14  Abel Cheung  <maddog@linux.org.hk>

	* Makefile.am: Include ghex.desktop.in in EXTRA_DIST, not ghex.desktop
	* configure.in: AC_INIT use ghex.desktop.in instead.
	* ghex.desktop: Removed.

2002-04-09  Hasbullah Bin Pit <sebol@ikhlas.com>

	* configure.in: Added 'ms' to ALL_LINGUAS.
	* po/ms.po: Updated Malay Translation.
